# vocab

./: .gitignore  CHANGELOG.md  Cargo.toml  Makefile  README.md  build.rs  docs.rs
src/: guess.rs  guesses.rs  lib.rs  schema.rs  translation.rs  vocab_store.rs
src/exporter/: csv_writer.rs  db_reader.rs  mod.rs
src/migrations/: 2020-02-22_vocab_table.sql
src/porter/: csv_io.rs  mod.rs
src/vocab_store/: entires.rs  guesses.rs  translation.rs
