[package]
name = "vocab"
version = "0.1.1"
authors = ["Daniel Mason <daniel@danielmason.com>"]
edition = "2018"
license = "MIT"
description = "A command line tool for learning vocabulary in a new language"
readme = "README.md"
categories = ["command-line-utilities"]
keywords = ["vocabulary", "learn", "learning"]
repository = "https://github.com/Gisleburt/vocab"

[dependencies]
diesel = { version="1.4.3", default-features=false, features=["sqlite"] }
structopt = "0.3.9"

[build-dependencies]
regex = "1.3.1"

[badges]
gitlab = { repository = "git@github.com:Gisleburt/vocab.git" }
maintenance = { status = "experimental" }
